--- a/build.gradle
+++ b/build.gradle
@@ -24,6 +24,7 @@ ext {
 dependencies {
     implementation 'org.springframework.boot:spring-boot-starter-security'
     implementation 'org.springframework.cloud:spring-cloud-starter-netflix-eureka-server'
+    implementation 'com.github.ulisesbocchio:jasypt-spring-boot-starter:3.0.5'
 
     // TEST
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
